# langchain_article1

./: .env.example  .gitignore  README.md  Taskfile.yml  pyproject.toml
src/: __init__.py  basic_chat.py  config.py  lcel_pipelines.py  main.py  research_assistant.py  structured_outputs.py  tool_usage.py
tests/: test_modules.py
